* Create MessageDisplayer Component to display a message to the user at the top of the document, to indicate if the pictures are loading, to begin the search or information about the pictures (dynamically) * Change the Picture component to be a div instead of an img element, so the image will be the background Image of the div, to be better displayed depending on the size. It receives the width and height dynamically from its parent component. * The user can change the width and height from the Menu and the PictureDiplayer will re-render to resize the images * The Loader shows correctly when loading images, add z-index * shouldComponentUpdate is used in the PictureDisplayer component to only re-render if the size of the pictures change, or if the search begins (for performance reasons)

--- a/src/components/Picture/Picture.css
+++ b/src/components/Picture/Picture.css
@@ -1,6 +1,5 @@
 .Picture {
-	width: 300px;
-	height: 300px;
+	margin-bottom:  1em;
 	max-width: 100%;
 	z-index: 10;
 	position: relative;
